Moved to SvelteKit, also more tenant stuff
